k8s/networking.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bugfixes
  name: soon
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: soon
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bugfix.es
        - www.bugfix.es
        - bugfixes.dev
        - www.bugfixes.dev
      secretName: bugfixes-soon-tls1
  rules:
    - host: bugfix.es
      http:
        paths:
          - backend:
              service:
                name: soon
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.bugfix.es
      http:
        paths:
          - backend:
              service:
                name: soon
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: bugfixes.dev
      http:
        paths:
          - backend:
              service:
                name: soon
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.bugfixes.dev
      http:
        paths:
          - backend:
              service:
                name: soon
                port:
                  number: 80
            path: /
            pathType: Prefix
